--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -4246,7 +4246,7 @@ ul#fb-files-container .hs-upload-indicator {
 	pointer-events:none;
 }
 
-.selection-menu li.disabled span {
+.selection-menu li.disabled span, .selection-menu li.disabled i {
 	color: #999;
 	text-shadow: initial;
 }
