--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -16,7 +16,7 @@
         <input type="hidden" id="supported-file-types" value="{{ cm.get_supported_upload_file_types }}">
         <input type="hidden" id="allow-multiple-file-upload" value={{ cm.allow_multiple_file_upload }}>
         <input type="hidden" id="file-count" value={{ cm.files.all.count }}>
-        <input type="hidden" id="resource-mode" value="{% if metadata_form %}Edit{% else %}View{% endif %}" >
+        <input type="hidden" id="resource-mode" value="{% if resource_edit_mode %}Edit{% else %}View{% endif %}" >
         <input type="hidden" id="resource-type" value="{{ cm|resource_type }}" >
         <input type="hidden" id="spatial-coverage-type" value="{{ spatial_coverage.type }}" >
         <input type="hidden" id="current-user-id" value="{{ request.user.id }}" >
@@ -66,7 +66,7 @@
             {% include "resource-landing-page/subject.html" %}
 
             {# ======= Coverage ======= #}
-            {% if spatial_coverage.north or spatial_coverage.northlimit or temporal_coverage or metadata_form %}
+            {% if spatial_coverage.north or spatial_coverage.northlimit or temporal_coverage or resource_edit_mode %}
                 {% include "resource-landing-page/coverage.html" %}
             {% endif %}
 
@@ -89,7 +89,7 @@
                         <li id="open-separator" role="separator" class="divider"></li>
                     {% endif %}
 
-                    {% if page.perms.change and metadata_form %}
+                    {% if page.perms.change and resource_edit_mode %}
                         {% if cm.resource_type == "CompositeResource" %}
                             <li id="btn-cut" data-menu-name="cut" data-fb-action="cut">
                                 <span class="fa fa-scissors icon-blue"></span>
@@ -145,26 +145,21 @@
                         <span class="fa fa-link icon-blue"></span>
                         <span>Get file URL</span>
                     </li>
-                    <li id="btn-get-referenced-url" data-menu-name="get-ref-url"
-                        data-toggle="modal" data-target="#redirect-referenced-url-dialog" hidden>
-                        <span class="fa fa-link icon-blue"></span>
+                    <li data-fb-action="getRefUrl"
+                        data-toggle="modal" data-target="#redirect-referenced-url-dialog">
+                        <span class="fa fa-external-link icon-blue"></span>
                         <span>Open referenced URL</span>
                     </li>
-                    <li role="separator" class="divider"></li>
-                    {% if page.perms.change and resource_edit_mode and cm.resource_type == "CompositeResource"%}
-                        <li id="btn-edit-referenced-url" data-menu-name="update-ref-url" data-toggle="modal" data-target="#edit-referenced-url-dialog" hidden>
-                            <span class="fa fa-link icon-blue"></span>
+                    {% if page.perms.change and resource_edit_mode and cm.resource_type == "CompositeResource" %}
+                        <li data-fb-action="updateRefUrl"
+                            data-toggle="modal" data-target="#edit-referenced-url-dialog">
+                            <span class="glyphicon glyphicon-pencil icon-blue"></span>
                             <span>Edit referenced URL</span>
                         </li>
-                        <li id="btn-set-generic-file-type" data-fb-action="setGenericFileType">
-                            <i class="fa fa-plus icon-green" aria-hidden="true"></i>
-                            <span>Add metadata</span>
-                        </li>
-                        <li id="btn-set-fileset-file-type" data-fb-action="setFileSetFileType">
-                            <i class="fa fa-plus icon-green" aria-hidden="true"></i>
-                            <span>Add metadata</span>
-                        </li>
-                        <li data-menu-name="content-type" data-fb-action="subMenuSetContentType"
+                    {% endif %}
+                    <li id="content-type-separator" role="separator" class="divider"></li>
+                    {% if page.perms.change and resource_edit_mode and cm.resource_type == "CompositeResource"%}
+                        <li data-fb-action="subMenuSetContentType"
                             class="dropdown-submenu submenu-trigger">
                             <span tabindex="-1" class="">
                                 <i class="fa fa-exchange icon-blue" aria-hidden="true"></i>
@@ -172,6 +167,16 @@
                                 <span class="caret"></span>
                             </span>
                             <ul class="dropdown-menu">
+                                {# ADD METADATA TO A FILE #}
+                                <li id="btn-set-generic-file-type" data-fb-action="setGenericFileType">
+                                    <i class="fa fa-plus icon-green" aria-hidden="true"></i>
+                                    <span>Add metadata</span>
+                                </li>
+                                {# ADD METADATA TO A FOLDER #}
+                                <li id="btn-set-fileset-file-type" data-fb-action="setFileSetFileType">
+                                    <i class="fa fa-plus icon-green" aria-hidden="true"></i>
+                                    <span>Add metadata</span>
+                                </li>
                                 <li id="btn-set-geo-file-type" data-menu-name="setgeorasterfiletype"
                                     data-toggle="tooltip" data-placement="right" data-fb-action="setGeoRasterFileType"
                                     title="Convert GeoTiff files to a geographic raster dataset to which you can add metadata">
@@ -251,7 +256,7 @@
 
                 {# POPUP MENU - Right clicking empty space in file browser #}
                 <ul id="right-click-container-menu" class="dropdown-menu fb-dropdown selection-menu">
-                    {% if page.perms.change and metadata_form %}
+                    {% if page.perms.change and resource_edit_mode %}
                         {% if cm|resource_type == "Model Program Resource" or cm|resource_type == "MODFLOW Model Instance Resource" or cm|resource_type == "SWAT Model Instance Resource" or cm|resource_type == "Model Instance Resource" or cm.resource_type == "CompositeResource" %}
                             <li id="btn-new-folder" data-menu-name="new-folder" data-toggle="modal"
                                 data-fb-action="createFolder"
@@ -278,7 +283,7 @@
                         <span class="fa fa-th-large icon-blue"></span>
                         <span>Select all</span>
                     </li>
-                    {% if page.perms.change and metadata_form and cm|resource_type == "CompositeResource"%}
+                    {% if page.perms.change and resource_edit_mode and cm|resource_type == "CompositeResource"%}
                         <li role="separator" class="divider"></li>
                         <li data-menu-name="paste">
                             <span class="fa fa-clipboard icon-blue"></span>
@@ -289,7 +294,7 @@
 
                 <div class="col-xs-12 content-block">
                     <h3>Content</h3>
-                    {% if page.perms.change and metadata_form and cm.get_supported_upload_file_types != "()" %}
+                    {% if page.perms.change and resource_edit_mode and cm.get_supported_upload_file_types != "()" %}
                         <div class="alert alert-info alert-dismissible" role="alert">
                             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
@@ -326,7 +331,7 @@
                             </div>
                         </div>
                     {% endif %}
-                    {% if page.perms.change and metadata_form %}
+                    {% if page.perms.change and resource_edit_mode %}
                         {% if file_type_error %}
                             <div class="alert alert-danger alert-dismissible" role="alert">
                                 <button id="validation-error-close" type="button" class="close"
@@ -368,7 +373,7 @@
                         {# ======= Modal window ends =======#}
 
                         <div id="hs-file-browser" data-res-id="{{ cm.short_id }}" data-current-path="data/contents"
-                             {% if page.perms.change and metadata_form %}data-mode="edit"{% endif %}
+                             {% if page.perms.change and resource_edit_mode %}data-mode="edit"{% endif %}
                              data-supported-files="{{ cm.get_supported_upload_file_types }}"
                              data-allow-multiple-files="{{ cm.allow_multiple_file_upload }}"
                              {% if cm.raccess.require_download_agreement %}
@@ -464,7 +469,7 @@
                                         </div>
                                         <div class="row">
                                             <div id="fb-file-operations-controls" class="col-xs-12 col-sm-12">
-                                                {% if page.perms.change and metadata_form and cm.get_supported_upload_file_types != "()" %}
+                                                {% if page.perms.change and resource_edit_mode and cm.get_supported_upload_file_types != "()" %}
                                                     <a type="button"
                                                        class="btn btn-success btn-xs dz-clickable upload-toggle">
                                                         <i class="fa fa-plus"></i> Add files
@@ -507,7 +512,7 @@
                                                     </div>
                                                 {% endif %}
 
-                                                {% if page.perms.change and metadata_form %}
+                                                {% if page.perms.change and resource_edit_mode %}
                                                     {% if cm|resource_type == "Model Program Resource" or cm|resource_type == "MODFLOW Model Instance Resource" or cm|resource_type == "SWAT Model Instance Resource" or cm|resource_type == "Model Instance Resource" or cm.resource_type == "CompositeResource" %}
                                                         <button id="fb-create-folder" class="disabled"
                                                                 data-fb-action="createFolder" data-toggle="modal"
@@ -561,7 +566,7 @@
                                                     {% endif %}
                                                 {% endif %}
 
-                                                {% if page.perms.change and metadata_form %}
+                                                {% if page.perms.change and resource_edit_mode %}
                                                     <button id="fb-delete" data-fb-action="delete"
                                                             class="disabled fb-space-right"
                                                             title="Delete" data-toggle="modal"
@@ -623,7 +628,7 @@
                                 <div class="fb-content-wrapper">
                                     <div class="fb-dropzone-wrapper{% if cm|resource_type|lower == "composite resource" %} ui-resizable{% endif %}">
                                         <form id="hsDropzone"
-                                              class="files-container h-100 ui-widget-content {% if page.perms.change and metadata_form %}dropzone{% endif %}"
+                                              class="files-container h-100 ui-widget-content {% if page.perms.change and resource_edit_mode %}dropzone{% endif %}"
                                               action="/hsapi/_internal/{{ cm.short_id }}/add-files-to-resource/"
                                               method="POST">
                                             {% csrf_token %}
@@ -648,7 +653,7 @@
                                             </ul>
                                         </form>
 
-                                        {% if page.perms.change and metadata_form and cm.get_supported_upload_file_types != "()" %}
+                                        {% if page.perms.change and resource_edit_mode and cm.get_supported_upload_file_types != "()" %}
                                             <div class="fb-upload-caption ">
                                                 <i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp;Upload files
                                                 smaller than 1GB in size by dragging & dropping, or click <a
@@ -686,7 +691,7 @@
                                     {% endif %}
                                 </div>
 
-                                {% if page.perms.change and metadata_form %}
+                                {% if page.perms.change and resource_edit_mode %}
                                     <form id="fb-delete-files-form" class="hidden"
                                           action="/hsapi/_internal/{{ cm.short_id }}/delete-multiple-files/"
                                           method="POST" enctype="multipart/form-data">
@@ -748,19 +753,19 @@
 
             {# ======= Resource Specific ======= #}
 
-            {% if site or extended_metadata_exists or res_add_metadata or metadata_form %}
+            {% if site or extended_metadata_exists or res_add_metadata or resource_edit_mode %}
                 {#  Resource specific metadata can't be edited for HIS Referenced Time Series #}
-                {% if cm|resource_type != "HIS Referenced Time Series" or not metadata_form %}
+                {% if cm|resource_type != "HIS Referenced Time Series" or not resource_edit_mode %}
                     {% if cm.resource_type != "CompositeResource" and cm|resource_type|lower != "collection resource" %}
                         <div class="col-xs-12 content-block">
                             <h3>Resource Specific</h3>
                             <div class="{% if not is_resource_specific_tab_active %}tab-pane{% else %}tab-pane active{% endif %}"
                                  id="resourceSpecificTab">
                                 <div class="row">
-                                    {% if not metadata_form %}
+                                    {% if not resource_edit_mode %}
                                         {% block extended_metadata %}{% endblock %}
                                     {% else %}
-                                        {% crispy metadata_form %}
+                                        {% crispy resource_edit_mode %}
                                     {% endif %}
                                     {% block extra_section %} {# add extra section for resource landing page #}
                                     {% endblock %}
@@ -783,7 +788,7 @@
             {% include "resource-landing-page/credits.html" %}
 
             {# ======= Citation ======= #}
-            {% if metadata_form %}
+            {% if resource_edit_mode %}
                 {% include "resource-landing-page/citation.html" with resource_mode="edit" %}
             {% else %}
                 {% include "resource-landing-page/citation.html" with resource_mode="view" %}
