--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -2,7 +2,7 @@
 
 <input id="resID" type="hidden" value="{{ cm.short_id }}"/>
 
-{% if page.perms.change and metadata_form %}
+{% if page.perms.change and resource_edit_mode %}
 
     <div class="modal fade" id="add-reference-dialog" tabindex="-1" role="dialog" aria-labelledby="add-reference"
          aria-hidden="true">
@@ -1481,7 +1481,7 @@
     </div>
 </div>
 
-{% if not metadata_form and not is_replaced_by %}
+{% if not resource_edit_mode and not is_replaced_by %}
     {% if page.perms.change or is_owner_user and cm.raccess.published %}
         {% if page.perms.delete or cm.raccess.published %}
             <div class="modal fade" id="new-version-resource-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
