--- a/theme/templates/resource-landing-page/coverage.html
+++ b/theme/templates/resource-landing-page/coverage.html
@@ -1,4 +1,4 @@
-{% if not metadata_form %}
+{% if not resource_edit_mode %}
     {# resource view mode #}
     <div class="col-xs-12 content-block">
         <h3>Resource Level Coverage</h3>
@@ -77,13 +77,13 @@
                             <table class="info-table">
                                 <tbody>
                                 <tr>
-                                    <td><i class="fa fa-calendar" aria-hidden="true"></i>&nbsp;<strong>Start Date:</strong></td>
+                                    <th><i class="fa fa-calendar" aria-hidden="true"></i>&nbsp;<strong>Start Date:</strong></th>
                                     <td><span class="format-date"
                                                 data-date="{{ temporal_coverage.start_date }}"></span>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td><i class="fa fa-calendar" aria-hidden="true"></i>&nbsp;<strong>End Date:</strong></td>
+                                    <th><i class="fa fa-calendar" aria-hidden="true"></i>&nbsp;<strong>End Date:</strong></th>
                                     <td><span class="format-date"
                                                 data-date="{{ temporal_coverage.end_date }}"></span></td>
                                 </tr>
