Fix a bug that keeps Save Changes buttons disabled if HTML5 validations fail

--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -790,24 +790,32 @@
                             <fieldset>
                                 {# Agency Name (Required) #}
                                 <div id="div_id_agency_name" class="control-group">
-                                    <label for="agency_name" class="control-label requiredField">Agency Name<span class="asteriskField">*</span></label>
+                                    <label for="agency_name" class="control-label requiredField">
+                                        Agency Name<span class="asteriskField">*</span>
+                                    </label>
 
-                                    <div class="controls"><input class="form-control input-sm textInput" maxlength="250" name="agency_name"
-                                                                 required="required" type="text"></div>
+                                    <div class="controls">
+                                        <input class="form-control input-sm textInput"
+                                               maxlength="250" name="agency_name" required="required" type="text">
+                                    </div>
                                 </div>
 
                                 {# Award Title #}
                                 <div id="div_id_award_title" class="control-group">
                                     <label for="award_title" class="control-label">Award Title</label>
-                                    <div class="controls"><input class="form-control input-sm" maxlength="250"
-                                                                 name="award_title"></div>
+                                    <div class="controls">
+                                        <input class="form-control input-sm" maxlength="250"
+                                               name="award_title">
+                                    </div>
                                 </div>
 
                                 {# Award Number #}
                                 <div id="div_id_award_number" class="control-group">
                                     <label for="award_number" class="control-label">Award Number</label>
-                                    <div class="controls"><input class="form-control input-sm textinput textInput" maxlength="100"
-                                                                 name="award_number" type="text"></div>
+                                    <div class="controls">
+                                        <input class="form-control input-sm textinput textInput" maxlength="100"
+                                               name="award_number" type="text">
+                                    </div>
                                 </div>
 
                                 {# Agency URL #}
@@ -816,7 +824,7 @@
 
                                     <div class="controls">
                                         <input class="form-control input-sm urlinput" maxlength="200"
-                                                                 name="agency_url" type="url">
+                                               name="agency_url" type="url">
                                     </div>
                                 </div>
 
