--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -1783,8 +1783,8 @@
                                 </li>
                             </ul>
                         </div>
-                        <a href="#" data-toggle="collapse" data-target="#usage-info" class="btn-show-more btn btn-default btn-xs"
-                           style="text-decoration: none;">Show More</a>
+                        <div data-toggle="collapse" data-target="#usage-info"
+                           class="btn-show-more btn btn-default btn-xs">Show More</div>
                         <br>
                     </div>
 
