Add better anchor for comments in highlights section

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1081,7 +1081,8 @@ table.info-table > tbody > tr > td {
 }
 
 table.info-table {
-    margin-bottom: 20px
+	margin-bottom: 20px;
+	word-break: break-word;
 }
 
 .res-header .collapsing {
