--- a/theme/templates/resource-landing-page/highlights.html
+++ b/theme/templates/resource-landing-page/highlights.html
@@ -41,7 +41,7 @@
     <tr>
         <th>Comments: </th>
         <td>
-            <a href="#comments">{{ cm.comments_count }} comment{% if cm.comments_count > 1 %}s{% endif %}</a>
+            <a href="#resource-comments">{{ cm.comments_count }} comment{% if cm.comments_count > 1 %}s{% endif %}</a>
         </td>
     </tr>
 </table>
