--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -1182,8 +1182,8 @@
     </div>
     {% endfor %}
 
-    {% for author in creator_formset.initial %}
-    <div class="modal fade" id="edit-creator-dialog{{ author.id }}" tabindex="-1" role="dialog"
+{#    {% for author in creator_formset.initial %}#}
+    <div class="modal fade" id="edit-creator-dialog" tabindex="-1" role="dialog"
          aria-labelledby="edit-creator" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -1194,128 +1194,101 @@
                     <h4 class="modal-title" id="edit-creator"> Edit Author</h4>
                 </div>
 
-                {% if creator_formset.initial|length > 1 %}
-                    <div class="modal-body">
-                        <span title="Remove"
-                           data-toggle="collapse" data-target="#confirm-delete-author{{ author.id }}"
-                           class="glyphicon glyphicon-trash icon-button table-icon btn-remove"></span>
+{#                {% if creator_formset.initial|length > 1 %}#}
+                <div class="modal-body">
+                    <span title="Remove"
+                       data-toggle="collapse" data-target="#confirm-delete-author"
+                       class="glyphicon glyphicon-trash icon-button table-icon btn-remove"></span>
 
-                        <div id="confirm-delete-author{{ author.id }}" class="collapse row" style="margin-top: 35px;">
-                            <div class="col-xs-6">
-                                <strong>Are you sure you want to delete this metadata element?</strong>
-                            </div>
-                            <div class="col-xs-6">
-                                <button type="button" class="btn btn-default" data-toggle="collapse"
-                                        style="margin-right: 10px;"
-                                        data-target="#confirm-delete-author{{ author.id }}">Cancel
-                                </button>
-                                <a type="button" class="btn btn-danger"
-                                   href="/hsapi/_internal/{{ cm.short_id }}/creator/{{ author.id }}/delete-metadata/">
-                                    Delete
-                                </a>
-                            </div>
+                    <div id="confirm-delete-author" class="collapse row" style="margin-top: 35px;">
+                        <div class="col-xs-6">
+                            <strong>Are you sure you want to delete this metadata element?</strong>
+                        </div>
+                        <div class="col-xs-6">
+                            <button type="button" class="btn btn-default" data-toggle="collapse"
+                                    style="margin-right: 5px;"
+                                    data-target="#confirm-delete-author">Cancel
+                            </button>
+                            <a type="button" class="btn btn-danger"
+                               href="/hsapi/_internal/{{ cm.short_id }}/creator/{{ author.id }}/delete-metadata/">
+                                Delete
+                            </a>
                         </div>
                     </div>
-                {% endif %}
+                </div>
+{#                {% endif %}#}
 
-                <form id="id_creator_{{ author.id }}"
-                      action="/hsapi/_internal/{{ cm.short_id }}/creator/{{ author.id }}/update-metadata/"
-                      method="POST" enctype="multipart/form-data">
+                <form method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                     <input name="resource-mode" type="hidden" value="edit">
 
                     <div class="modal-body">
                         <div class="form-group">
                             <fieldset>
-                                {% if author.name %}
-                                <div id="div_id_name" class="control-group">
-                                    <label class="control-label requiredField">Name<span
+                                <div class="control-group control-group--name">
+                                    <label for="creator-name" class="control-label requiredField">Name<span
                                             class="asteriskField">*</span></label>
 
-                                    <div class="controls"><input
-                                            class="form-control input-sm textinput textInput"
-                                            id="id_creator-{{ author.order|add:"-1" }}-name" maxlength="100" name="creator-{{ author.order|add:"-1" }}-name"
-                                            required="required" type="text" value="{% if author.name %}{{ author.name }}{% endif %}"></div>
-                                </div>
-                                {% else %}
-                                <div id="div_id_name" class="control-group" style="display:none">
-                                    <label class="control-label requiredField">Name<span
-                                            class="asteriskField">*</span></label>
-
-                                    <div class="controls"><input
-                                            class="form-control input-sm textinput textInput"
-                                            id="id_creator-{{ author.order|add:"-1" }}-name" maxlength="100" name="creator-{{ author.order|add:"-1" }}-name"
-                                            type="text" value="{% if author.name %}{{ author.name }}{% endif %}"></div>
-                                </div>
-                                {% endif %}
-                                {% if author.description %}
-                                    <div id="div_id_description" class="control-group">
-                                        <label class="control-label">HydroShare User Identifier (URL)</label>
-
-                                        <div class="controls"><input
-                                                class="form-control input-sm urlinput"
-                                                id="id_creator-{{ author.order|add:"-1" }}-description" maxlength="200"
-                                                name="creator-{{ author.order|add:"-1" }}-description" type="url"
-                                                value="{{ author.description }}"
-                                                readonly></div>
+                                    <div class="controls">
+                                        <input id="creator-name" class="form-control input-sm textinput textInput"
+                                               maxlength="100">
                                     </div>
-                                {% endif %}
-                                <!--If you don't have an author name you need an organization-->
-                                {% if author.name %}
-                                <div id="div_id_organization" class="control-group">
-                                    <label class="control-label">Organization</label>
-
-                                    <div class="controls"><input
-                                            class="form-control input-sm textinput textInput"
-                                            id="id_creator-{{ author.order|add:"-1" }}-organization" maxlength="200"
-                                            name="creator-{{ author.order|add:"-1" }}-organization" type="text" value="{% if author.organization %}{{ author.organization }}{% endif %}"></div>
                                 </div>
-                                {% else %}
-                                <div id="div_id_organization" class="control-group requiredField">
-                                    <label class="control-label">Organization<span
-                                            class="asteriskField">*</span></label>
 
-                                    <div class="controls"><input
-                                            class="form-control input-sm textinput textInput"
-                                            id="id_creator-{{ author.order|add:"-1" }}-organization" maxlength="200"
-                                            required="required" name="creator-{{ author.order|add:"-1" }}-organization" type="text" value="{% if author.organization %}{{ author.organization }}{% endif %}"></div>
-                                </div>
-                                {% endif %}
-                                <div id="div_id_email" class="control-group">
-                                    <label class="control-label">Email</label>
+{#                                {% if author.description %}#}
+                                <div class="control-group control-group--description">
+                                    <label for="creator-description" class="control-label">HydroShare User Identifier (URL)</label>
 
                                     <div class="controls">
-                                        <input class="form-control input-sm emailinput"
-                                               id="id_creator-{{ author.order|add:"-1" }}-email" maxlength="75" name="creator-{{ author.order|add:"-1" }}-email"
-                                               type="email" value="{% if author.email %}{{ author.email }}{% endif %}">
+                                        <input id="creator-description" class="form-control input-sm urlinput"
+                                               maxlength="200" type="url" readonly>
                                     </div>
                                 </div>
-                                <div id="div_id_address" class="control-group">
-                                    <label class="control-label">Address</label>
+{#                                {% endif %}#}
+
+                                <div class="control-group control-group--organization">
+                                    <label for="creator-organization" class="control-label">Organization<span class="asteriskField">*</span></label>
 
                                     <div class="controls">
-                                        <input class="form-control input-sm textinput textInput"
-                                               id="id_creator-{{ author.order|add:"-1" }}-address" maxlength="250"
-                                               name="creator-{{ author.order|add:"-1" }}-address"
-                                               type="text" value="{% if author.address %}{{ author.address }}{% endif %}">
+                                        <input id="creator-organization" type="text"
+                                               class="form-control input-sm textinput textInput" maxlength="200">
                                     </div>
                                 </div>
-                                <div id="div_id_phone" class="control-group">
-                                    <label class="control-label">Phone</label>
+
+                                <div class="control-group control-group--email">
+                                    <label for="creator-email" class="control-label">Email</label>
 
                                     <div class="controls">
-                                        <input class="form-control input-sm textinput textInput"
-                                               id="id_creator-{{ author.order|add:"-1" }}-phone" maxlength="25" name="creator-{{ author.order|add:"-1" }}-phone"
-                                               type="text" value="{% if author.phone %}{{ author.phone }}{% endif %}">
+                                        <input id="creator-email" class="form-control input-sm emailinput" maxlength="75"
+                                               type="email">
                                     </div>
                                 </div>
-                                <div id="div_id_homepage" class="control-group">
-                                    <label class="control-label">Homepage</label>
 
-                                    <div class="controls"><input
-                                            class="form-control input-sm urlinput"
-                                            id="id_creator-{{ author.order|add:"-1" }}-homepage" maxlength="200" name="creator-{{ author.order|add:"-1" }}-homepage"
-                                            type="url" value="{% if author.homepage %}{{ author.homepage }}{% endif %}"></div>
+                                <div class="control-group control-group--address">
+                                    <label for="creator-address" class="control-label">Address</label>
+
+                                    <div class="controls">
+                                        <input id="creator-address" class="form-control input-sm textinput textInput"
+                                               maxlength="250" type="text">
+                                    </div>
+                                </div>
+
+                                <div class="control-group control-group--phone">
+                                    <label for="creator-phone" class="control-label">Phone</label>
+
+                                    <div class="controls">
+                                        <input id="creator-phone" class="form-control input-sm textinput textInput"
+                                               maxlength="25" type="text">
+                                    </div>
+                                </div>
+
+                                <div class="control-group control-group--homepage">
+                                    <label for="creator-homepage" class="control-label">Homepage</label>
+
+                                    <div class="controls">
+                                        <input class="form-control input-sm urlinput"
+                                               id="creator-homepage" maxlength="200" ype="url">
+                                    </div>
                                 </div>
                             </fieldset>
 
@@ -1338,7 +1311,7 @@
             </div>
         </div>
     </div>
-    {% endfor %}
+{#    {% endfor %}#}
 
     <div class="modal fade" id="add-source-dialog" tabindex="-1" role="dialog" aria-labelledby="add-source"
          aria-hidden="true">
