--- a/theme/templates/resource-landing-page/resource-header.html
+++ b/theme/templates/resource-landing-page/resource-header.html
@@ -22,13 +22,18 @@
                             {% for author in creator_formset.initial %}
                                 <span>
                                     {% if author.name %}
-                                        <a data-toggle="modal" data-placement="auto" title="Edit {{ author.name }}"
-                                           data-target="#edit-creator-dialog{{ author.id }}">
+                                        <a style="cursor: pointer;" title="Edit {{ author.name }}"
+                                              class="author-modal-trigger" data-id="{{ author.id }}"
+                                              data-name="{{ author.name }}" data-order="{{ author.order }}"
+                                              data-description="{{ author.description|default:"" }}"
+                                              data-organization="{{ author.organization|default:"" }}"
+                                              data-email="{{ author.email|default:"" }}" data-address="{{ author.address|default:"" }}"
+                                              data-phone="{{ author.phone|default:"" }}" data-homepage="{{ author.homepage|default:"" }}">
                                             {{ author.name }}
                                         </a>
                                     {% else %}
                                         <a data-toggle="modal" data-placement="auto" title="Edit {{ author.organization }}"
-                                           data-target="#edit-creator-dialog{{ author.id }}">
+                                           data-target="#edit-creator-dialog">
                                             {{ author.organization }}
                                         </a>
                                     {% endif %}
