--- a/theme/templates/includes/identifiers-form.html
+++ b/theme/templates/includes/identifiers-form.html
@@ -17,11 +17,6 @@
             </select>
         </fieldset>
 
-        <fieldset class="hidden identifier-specify">
-            <label>Specify</label>
-            <input class="form-control">
-        </fieldset>
-
         <fieldset class="identifier-link-container">
             <label>Identifier Link</label>
             <input class="form-control identifier-link">
@@ -36,12 +31,7 @@
 
         <fieldset class="select-identifier-fieldset">
             <label>Identifier Name</label>
-            <select class="form-control select-identifier"
-                    {% if name == "GoogleScholarID" or name == "ORCID" or name == "ResearchGateID" or name == "ResearcherID" %}
-                    name="identifier_name"
-                    value="{{ name }}"
-                    {% endif %}
-            >
+            <select class="form-control select-identifier" name="identifier_name" value="{{ name }}">
                 <option value="GoogleScholarID"
                         {% if name == "GoogleScholarID" %}selected{% endif %}>
                     GoogleScholarID
@@ -58,7 +48,6 @@
                         {% if name == "ResearcherID" %}selected{% endif %}>
                     ResearcherID
                 </option>
-
             </select>
         </fieldset>
 
