--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -2001,8 +2001,15 @@
                                                         Shareable
                                                     </label>
                                                 </div>
-                                                <p id="shareable-description" class="text-muted small">Allows others to share the
-                                                    resource without owner’s permission.</p>
+                                                <p id="shareable-description" class="text-muted small">
+                                                    {% if cm.raccess.shareable %}
+                                                        Uncheck the box to prevent others from sharing the resource
+                                                        without the owner's permission.
+                                                    {% else %}
+                                                        Check this box to allow others to share the resource without the
+                                                        owner's permission.
+                                                    {% endif %}
+                                                </p>
 
                                                 <input name="flag" type="hidden"
                                                        {% if cm.raccess.shareable %}value="make_not_shareable"
