Allow checking checkbox by clicking on its label

--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -1605,7 +1605,10 @@
                                 In copying this resource you are ethically bound to respect the terms of this license.
                                 Please confirm that you accept the terms of this license below before you can copy this resource.
                                 </p>
-                                <input type="checkbox" id="agree-chk-copy"><label for="agree-chk-copy" class="checkbox-label">I accept the terms of this license.</label>
+                                <input type="checkbox" id="agree-chk-copy">
+                                <label for="agree-chk-copy" class="checkbox-label">
+                                    I accept the terms of this license.
+                                </label>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
@@ -1640,7 +1643,10 @@
                 In downloading this resource contents you are ethically bound to respect the terms of this license.
                 Please confirm that you accept the terms of this license below before you can do any downloads for this resource.
                 </p>
-                <input type="checkbox" id="agree-chk-download-bag"><label for="agree-chk-download" class="checkbox-label">I accept the terms of this license.</label>
+                <input type="checkbox" id="agree-chk-download-bag">
+                <label for="agree-chk-download-bag" class="checkbox-label">
+                    I accept the terms of this license.
+                </label>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
@@ -1671,7 +1677,10 @@
                 In downloading this resource contents you are ethically bound to respect the terms of this license.
                 Please confirm that you accept the terms of this license below before you can do any downloads for this resource.
                 </p>
-                <input type="checkbox" id="agree-chk-download-file"><label for="agree-chk-download-file" class="checkbox-label">I accept the terms of this license.</label>
+                <input type="checkbox" id="agree-chk-download-file">
+                <label for="agree-chk-download-file" class="checkbox-label">
+                    I accept the terms of this license.
+                </label>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
