--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1291,7 +1291,7 @@ a[data-toggle='tab']{
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     border-radius: 0;
-    margin: 0 -1px;
+    margin: 0;
 }
 
 #btn-public {
@@ -2475,6 +2475,10 @@ div#coverage-spatial .coordinates-label-addon {
 
 .coverage-container {
 	margin-bottom:20px;
+}
+
+#ui-datepicker-div {
+	z-index: 2 !important;
 }
 
 .invalid-input {
