Left align +1 votes label

--- a/theme/templates/generic/includes/rating.html
+++ b/theme/templates/generic/includes/rating.html
@@ -1,6 +1,6 @@
 {% load mezzanine_tags rating_tags i18n %}
 
-<td><strong>+1 Votes:</strong></td>
+<th>+1 Votes:</th>
 <td>
     <span id="rating-{{ rating_object.id }}">
     {% if rating_sum > 0 %}
