Let publish modal be rendered even if the resource is not public

--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -1488,7 +1488,7 @@
             </div>
         {% endif %}
 
-        {% if page.perms.delete and cm.can_be_published and cm.raccess.public %}
+        {% if page.perms.delete and cm.can_be_published %}
             <div class="modal fade" id="submit-for-publication-dialog" tabindex="-1" role="dialog"
                  aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
