--- a/theme/templates/resource-landing-page/additional-metadata.html
+++ b/theme/templates/resource-landing-page/additional-metadata.html
@@ -1,7 +1,7 @@
 <!-- ========= EXTRA METADATA TAB ========= -->
 {% if metadata_form or page.get_content_model.extra_metadata.items|length > 0 %}
     <div class="col-xs-12 content-block">
-        <h3>Additional Resource Level Metadata
+        <h3>Additional Metadata
         {% if metadata_form %}
             <a id="btn-add-new-entry" type="button" class="btn btn-success btn-xs" title="Add New Entry">
                 <i class="fa fa-plus"></i>
